tests/error/pointer_unknown.gw
typedef unknown_type (my_function)(){}
